<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/d01"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_current_forecast_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="@string/current_forecast_label"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_temperature_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="@string/temperature_label"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_current_forecast_label" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="56°"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tv_temperature_label"
                app:layout_constraintTop_toBottomOf="@id/tv_current_forecast_label" />

            <TextView
                android:id="@+id/tv_humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="@string/humidity_label"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_temperature_label" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="12%"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tv_humidity_label"
                app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

            <TextView
                android:id="@+id/tv_rain_level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="@string/rain_level_label"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity_label" />

            <TextView
                android:id="@+id/tv_rain_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="100mm"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tv_rain_level_label"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity" />

            <TextView
                android:id="@+id/tv_cloudiness_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="@string/cloudiness_label"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rain_level_label" />

            <TextView
                android:id="@+id/tv_cloudiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="82%"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tv_cloudiness_label"
                app:layout_constraintTop_toBottomOf="@id/tv_rain_level" />

            <TextView
                android:id="@+id/tv_wind_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="@string/wind_speed_label"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cloudiness_label" />

            <TextView
                android:id="@+id/tv_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="100mph"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tv_wind_speed_label"
                app:layout_constraintTop_toBottomOf="@id/tv_cloudiness" />

            <TextView
                android:id="@+id/tv_wind_direction_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="@string/wind_direction_label"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_wind_speed_label" />

            <TextView
                android:id="@+id/tv_wind_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:text="88°E"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tv_wind_direction_label"
                app:layout_constraintTop_toBottomOf="@id/tv_wind_speed" />
            
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>